mynotes/kubernates/resources/k8s/ingress/tomcat-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytomcat
spec:
  selector:
    matchLabels:
      app: mytomcat
  replicas: 1
  template:
    metadata:
      labels:
        app: mytomcat
    spec:
      containers:
      - name: mytomcat
        image: zhiqiang/mytomcat:1.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mytomcat
spec:
  type: NodePort
  selector:
    app: mytomcat
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
